deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - name: static-site
        image: <ECR_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/static-site:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: static-site-svc
spec:
  selector:
    app: static-site
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
